fix single page display on mobile

--- a/assets/sass/theme/_responsive.scss
+++ b/assets/sass/theme/_responsive.scss
@@ -154,9 +154,14 @@
 		}
 	}
 	#singlePage {
-		margin: 0;
+		top: 0;
+		opacity: 1;
+		margin: 25px 0 15px;
 		padding: 0 15px;
 		text-align: center;
+		p {
+			text-align: left;
+		}
 		h1 {
 			margin: 0 0 15px;
 			padding: 0;
