--- a/style.css
+++ b/style.css
@@ -2963,9 +2963,13 @@ header {
         height: 15px; }
 
   #singlePage {
-    margin: 0;
+    top: 0;
+    opacity: 1;
+    margin: 25px 0 15px;
     padding: 0 15px;
     text-align: center; }
+    #singlePage p {
+      text-align: left; }
     #singlePage h1 {
       margin: 0 0 15px;
       padding: 0;
